--- a/CearBank/index.html
+++ b/CearBank/index.html
@@ -44,7 +44,7 @@
         </ul>
     </nav>
 
-    <h1 class="header">KINGDOM OF CATS AND DOGS.</h1>
+    <h1 class="header">WELCOME TO THE KINGDOM OF CATS.</h1>
     <p class="header">Cat's are known to be theruptic so here's some cute pics.</p>
 
 
